--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,14 @@ DerivedData/
 *.dSYM
 
 # CocoaPods
-#
+Pods/
+Pods
+.DS_Store
+Podfile.lock
+/.DS_Store
+Podfile.lock
+/Podfile.lock
+
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
